# bdu-fstec-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bdu_fstec_mcp/: __init__.py  _cli.py  _config.py  cache.py  client.py  formatters.py  models.py  server.py  store.py
tests/: conftest.py  test_cache.py  test_client.py  test_formatters.py  test_schema.py  test_server_e2e.py  test_store.py
